<resources>
    <string name="app_name">KonkR</string>
    <string name="facebook_app_id">329356700926638</string>
    <string name="lorem_ipsum" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="something_went_wrong">Something went wrong, please try again later.</string>
    <string name="fitlinktxt">FITLINK</string>
    <string name="app_logo">APP LOGO</string>
    <string name="please_wait">Please wait...</string>
    <string name="icon_heart" translatable="false">&#xe900;</string>
    <string name="sign_in">Sign In</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="use_facebook_for_sign_in">Use Facebook for Sign in</string>
    <string name="forgot_password_que">Forgot password ?</string>
    <string name="create_account"><u>Create Account</u></string>
    <string name="i_accept">I accept</string>
    <string name="terms_and_condition"><u>Terms &amp; Conditions</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_acc">Already have an account?</string>
    <string name="country">Select your country</string>
    <string name="konkr_txt">Welcome to KonkR, Will you inspire or be inspired?</string>
    <string name="home_screen">Home</string>
    <string name="setup_profile">Set Up Profile</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="send">Send</string>
    <string name="forgot_pwd">Your password has been sent to your email</string>
    <string name="forgot_pass_text">You will receive reset password link\n on your register Email Address</string>
    <string name="enter_your_email">Enter your Email Id</string>
    <string name="title_terms_condition">TERMS &amp; CONDITIONS</string>
    <string name="setting_txt">Settings</string>
    <string name="valid_term">Please accept terms &amp; conditions</string>
    <string name="view_edit_profile">View/Edit Profile</string>
    <string name="verification_badge">Verification Badge</string>
    <string name="set_up_card">Set up Card</string>
    <string name="partners">Partners</string>
    <string name="premium_membership">Premium Membership</string>
    <string name="donations">Donations</string>
    <string name="donate_us">Donate Us</string>
    <string name="how_the_app_works">How the app works</string>
    <string name="notifications">Notifications</string>
    <string name="setting_terms_and_condition">Terms &amp; Conditions</string>
    <string name="change_password">Change Password</string>
    <string name="share_your_experience">Share Your Experience</string>
    <string name="social_sharing">Social Sharing</string>
    <string name="logout">Logout</string>
    <string name="logout_alert">Do you want to log out?</string>
    <string name="logout_success">Successfully LOgout</string>
    <string name="tv_logout">Are you sure you want to logout?</string>
    <string name="donate">Donate</string>
    <string name="card_no_text">XXXX-XXXX-XXXX-1234</string>
    <string name="valid_up_to">Valid Up To</string>
    <string name="card_date">05/20</string>
    <string name="no_data_available">"No card(s) found"</string>
    <string name="no_supp_available">"No supplement(s) found"</string>
    <string name="no_meal_available">"No meal(s) found"</string>
    <string name="no_training_available">"You did not added any training yet!"</string>
    <string name="share_your_feedback">Share your feedback</string>
    <string name="add_card_title">ADD CARD</string>
    <string name="card_detail_title">CARD DETAILS</string>
    <string name="set_up_card_title">SET UP CARD</string>
    <string name="select_your_card_title">SELECT YOUR CARD</string>
    <string name="donate_us_title">DONATIONS</string>
    <string name="cvv_code">CVV</string>
    <string name="card_number">Card Number</string>
    <string name="name_on_card_filed">Please enter Name on Card</string>
    <string name="card_number_null">Please enter Card Number</string>
    <string name="cvv_null">Please enter valid CVV</string>
    <string name="valid_card_number">Please enter valid Card Number</string>
    <string name="valid_expirydate">Please enter valid Expiry Date</string>
    <string name="valid_cvv">Please enter valid CVV</string>
    <string name="success_payment">Payment has been success !!</string>
    <string name="success_add_card">Card has been added  successfully !!</string>
    <string name="delete_added_card">Are you sure you want to delete this card? </string>
    <string name="delete_meal">Are you sure you want to delete this meal? </string>
    <string name="delete_added_suppliment">Are you sure you want to delete this supplement? </string>
    <string name="success_remove_card">Card has been removed  successfully !!</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="empty_expirydate">Please select expiry date.</string>
    <string name="add_card">Add</string>
    <string name="update_card">Update</string>
    <string name="pay_now">Pay Now</string>
    <string name="thank_you">Thank You!</string>
    <string name="not_supported_card">Your card is not supported. Please use a Visa, MasterCard, or American Express card.</string>
    <string name="no_image_available">"No additional picture(s) found"</string>
    <string name="delete_added_workout">Are you sure you want to delete this workout?</string>
    <string name="partners_title">PARTNERS</string>
    <string-array name="select_month">
        
        
        
        
        
        
        
        
        
        
        
        
        
        <item>Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>Octomber</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="title">Title</string>
    <string name="share_us_your_experince_title">SHARE YOUR EXPERIENCE</string>
    <string name="share_us_your_experince">Share us your experince</string>
    <string name="_500_characters_remaining">500 Characters Remaining</string>
    <string name="which_features_would_you_like_to_see_in_future">Which features would you like to see in future ?</string>
    <string name="title_null">Please enter Title</string>
    <string name="experince_null">Please enter Your experience</string>
    <string name="feature_null">Please enter Future Feature</string>
    <string name="valid_title">Title should be of minimum 15 characters.</string>
    <string name="feedback_success">Your feedback is successfully sent !!</string>
    <string name="submit">Submit</string>
    <string name="via_sms">Via SMS</string>
    <string name="share_to_facebook">Share to Facebook</string>
    <string name="social_share_sms_txt">Social Sharing - Via SMS</string>
    <string name="message_null">Message is required(s) field</string>
    <string name="valid_message">Message should be of minimum 50 characters.</string>
    <string name="message_success">Your Message is successfully sent !!</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="ectomorph">Ectomorph</string>
    <string name="endomorph">Endomorph</string>
    <string name="mesomorph">Mesomorph</string>
    <string name="first_name_and_or_last_name">First Name and / or Last Name</string>
    <string name="nickname">Nickname</string>
    <string name="email">Email</string>
    <string name="body_type">Body Type</string>
    <string name="celebrity">Celebrity</string>
    <string name="influence">Influence</string>
    <string name="influencer">Influencer</string>
    <string name="sponsor">Sponsor</string>
    <string name="search">Search</string>
    <string name="search_user">Search Users</string>
    <string name="country_txt">Country</string>
    <string name="training_txt">Training goals</string>
    <string name="valid_training">Training goals is required field(s)</string>
    <string name="valid_first_last_name">First name or last name is required field(s)</string>
    <string name="valid_nick_name">Nick name is required field(s)</string>
    <string name="sucess_search_user">Sucessfully found user !!</string>
    <string name="status">Status</string>
    <string name="donations_title">DONATIONS</string>
    <string name="proceed">Proceed</string>
    <string name="platinum">Platinum</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="bronze">Bronze</string>
    <string name="platinumAmount">$1000+</string>
    <string name="goldAmount">$500+</string>
    <string name="silverAmount">$250+</string>
    <string name="bronzeAmount">$100+</string>
    <string name="enter_donation_amount">Please enter Donation Amount</string>
    <string-array name="select_country_search">
        <item>Country</item>
        <item>India</item>
        <item>Australia</item>
        <item>Canada</item>
        <item>US</item>
        <item>China</item>
        <item>New Zealand</item>
        <item>South Africa</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>Malaysia</item>
        <item>Portugal</item>
    </string-array>
    <string-array name="select_Training_goals">
        <item>Training goals</item>
        <item>Normal</item>
        <item>Silver</item>
        <item>Gold</item>
        <item>Platinum</item>
    </string-array>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="change">Change</string>
    <string name="change_pwd_txt">CHANGE PASSWORD</string>
    <string name="new_pwd_txt">Password has been changed successfully</string>
    <string name="editext_allowed">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890</string>
    <string name="edt_old_password" translatable="false">Enter old password*</string>
    <string name="edt_new_password" translatable="false">Enter new password*</string>
    <string name="edt_confirm_new_password" translatable="false">Confirm new password*</string>
    <string name="msg_enter_old_password" translatable="false">Please enter Current Password</string>
    <string name="msg_enter_new_password" translatable="false">Please enter New Password</string>
    <string name="font_mavenpro_regular" translatable="false">Fonts/MavenPro-Regular.ttf</string>
    <string name="font_mavenpro_medium" translatable="false">Fonts/MavenPro-Medium.ttf</string>
    <string name="font_mavenpro_bold" translatable="false">Fonts/MavenPro-Bold.ttf</string>
    <string name="menu_home_feed">Home Feed</string>
    <string name="menu_mi_training">MiTraining</string>
    <string name="menu_mi_meal">MiMeal</string>
    <string name="menu_mi_supplement">MiSupps</string>
    <string name="menu_search_user">Search User</string>
    <string name="menu_settings">Settings</string>
    <string name="select_country">Select Country</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
</resources>