<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:myedittext="http://schemas.android.com/apk/res-auto"
    xmlns:mytextview="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.konkr.Activities.ForgotPasswordActivity">

        <com.konkr.Utils.Headerbar
            android:id="@+id/headerBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/header"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.konkr.Utils.Headerbar>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/clMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/shadow"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.konkr.Utils.MyTextView
                android:id="@+id/tvForgotMessage"
                style="@style/MyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/forgot_pass_text"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                mytextview:txt_custom_font="@string/font_mavenpro_medium" />

            <com.konkr.Utils.MyEditText
                android:id="@+id/etForgotEmail"
                style="@style/MyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@android:color/transparent"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_5sdp"
                android:singleLine="true"
                android:textSize="@dimen/_12ssp"
                app:edt_custom_font="@string/font_mavenpro_regular"
                app:layout_constraintTop_toBottomOf="@+id/tvForgotMessage" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginBottom="@dimen/_40sdp"
                android:background="@color/view_color"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_10sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etForgotEmail" />

        </android.support.constraint.ConstraintLayout>

        <com.konkr.Utils.MyTextView
            android:id="@+id/tvSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_50sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/button_shadow"
            android:gravity="center"
            android:text="@string/send"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            mytextview:txt_custom_font="@string/font_mavenpro_bold" />
    </android.support.constraint.ConstraintLayout>
</layout>

